[package]
name = "locci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
tokio = { version = "1.29.1", features = ["full"] }
prettytable-rs = "0.10.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
bollard = { version = "0.16.1", features = [
    "json_data_content",
    "buildkit",
    "chrono",
] }
futures-core = "0.3"
futures-util = "0.3"
bytes = { version = "1.6.0", features = ["serde"] }
tar = "0.4"
dagger-sdk = "0.9.8"
clap = { version = "4.5.9", features = ["derive"] }
